k8s/server-deployment.yml
apiVersion: app/v1
kind: Deployment
metadata:
        name: server-deployment
spec:
        replicas: 3
        selector: 
           matchLabels:
                   component: server

        template:
                metadata:
                        labels:
                                component: server
                spec:
                        containers:
                                - name: server
                                  image: bweng/Fib-app-server
                                  ports: 
                                    - containerPort: 5000
