k8s/redis-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata: 
   name: redis-cluster-ip-service
spec: 
  type: ClusterIP
  selector: 
     component: redis
  ports: 
     - port: 6379
       targetPort: 6379
